<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp"
    tools:background="@drawable/my_bg"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/one_hundred_eight"
        android:layout_height="@dimen/one_hundred_eight"
        android:layout_gravity="center"
        android:src="@drawable/trainfinal"
        />

    <EditText
        style="@style/basic_textview"
        android:id="@+id/new_username"
        android:hint="@string/input_e_mail"
        />

    <EditText
        style="@style/basic_textview"
        android:id="@+id/new_password"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        />

    <EditText
        style="@style/basic_textview"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />

    <Button
        style="@style/basic_button"
        android:id="@+id/sign_newuser"
        android:text="@string/sign_up"
        android:onClick="register_user"
        android:layout_gravity="center"
        />
</LinearLayout>